# Simple-GRAPE

./: .gitmodules  README.md  pyproject.toml
data/contour_plots/: 2_dim_drift_param_1.0_taylor_len_10_contour_data.csv  2_dim_drift_param_1.0_taylor_len_10_contour_reduced_data.csv  3_dim_drift_param_1.0_taylor_len_10_contour_data.csv  3_dim_drift_param_1.0_taylor_len_10_contour_reduced_data.csv  3_dim_drift_param_1.0_taylor_len_20_contour_data.csv  3_dim_drift_param_1.0_taylor_len_20_contour_reduced_data.csv  4_dim_drift_param_1.0_taylor_len_10_contour_data.csv  4_dim_drift_param_1.0_taylor_len_10_contour_reduced_data.csv  4_dim_drift_param_1.0_taylor_len_20_contour_data.csv  4_dim_drift_param_1.0_taylor_len_20_contour_reduced_data.csv
data/multiple_run/Full GRAPE Spin 1/: grape_data.csv  metadata.csv  reduced_grape_data.csv
data/multiple_run/Full GRAPE Spin 1 Targets 1/: grape_data.csv  metadata.csv  reduced_grape_data.csv
data/multiple_run/Full GRAPE Spin 1 Targets 2/: grape_data.csv  metadata.csv  reduced_grape_data.csv
data/multiple_run/Full GRAPE Spin 1_2/: grape_data.csv  metadata.csv
data/multiple_run/Full GRAPE Spin 3_2/: grape_data.csv  metadata.csv  reduced_grape_data.csv
data/multiple_run/Full GRAPE Spin 3_2 Targets 3/: grape_data.csv  metadata.csv  reduced_grape_data.csv
data/multiple_run/Spin 1/: grape_data.csv  (+2 more)
full_grape/: full_grape.py  multiple_run.py  single_run.py
graph_util/: colormap.py  contour.py  contour_data.py  density.py  main.py  waveform.py  waveforms.py
simple_grape/: main.py  multiple_run.py  simple_grape.py  single_run.py
(+238314 files in other folders)
